# globals_native

./: .gitignore  CMakeLists.txt  dumpbin.bat
src/: _library.def_  library.c  library.h
